# nidus

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  install.sh  justfile
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/skills/blueprint/: SKILL.md
.github/workflows/: ci.yml  docker.yml  helm.yml  release.yml  sdk-js-release.yml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: nidus_regression.rs
benchmarks/src/: ann.rs  data.rs  lib.rs  main.rs  metrics.rs  quant.rs  report.rs  usage.txt
benchmarks/src/engines/: duckdb.rs  lancedb.rs  mod.rs  nidus.rs
charts/nidus/: .helmignore  Chart.yaml  README.md  values.yaml
charts/nidus/ci/: test-values.yaml
charts/nidus/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: README.md  astro.config.mjs  package.json
docs/public/: CNAME  llms.txt
docs/src/components/: Head.astro  Hero.astro  PageSidebar.astro  PageToc.astro  Sidebar.astro
docs/src/content/docs/: getting-started.md  index.mdx
docs/src/content/docs/guides/: backends.md  cli-and-server.md  how-it-works.md  http-server.md  integrating.md  kubernetes.md  memory-stores.md  multi-box.md  remember-and-recall.md  search.md  storage-backends.md  storage.md
docs/src/content/docs/reference/: api.md  configuration.md  http-api.md  performance.md
docs/src/content/docs/sdks/: javascript.md
docs/src/styles/: nest.css
examples/: demo.rs  memory.rs
sdks/js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/js/src/: client.ts  errors.ts  filter.ts  index.ts  types.ts  values.ts
sdks/js/test/: integration.test.ts  unit.test.ts
src/: config.rs  http.rs  index_cache.rs  lib.rs  memory.rs  model.rs  providers.rs
src/ann/: hnsw.rs  ivf.rs  mod.rs  persist.rs
src/backend/: aws_creds.rs  cloud.rs  gcs.rs  local.rs  mod.rs  object.rs  ram.rs  redis.rs  s3.rs  tests.rs
src/cli/: backup.rs  mod.rs
src/data/: SPEC.md  mmap.rs  mod.rs  segments.rs
src/embed/: cohere.rs  gemini.rs  jina.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  voyage.rs
src/filter/: SPEC.md  mod.rs
src/fts/: analyzer.rs  mod.rs
src/glob/: SPEC.md  mod.rs
src/lock/: SPEC.md  mod.rs
src/log/: SPEC.md  mod.rs
src/manifest/: mod.rs
src/search/: SPEC.md  mod.rs
src/server/: dto.rs  mod.rs
src/store/: SPEC.md  memtier.rs  mod.rs  quant.rs  read.rs  scoring.rs  tests.rs  write.rs
src/summarize/: anthropic.rs  mod.rs  openai.rs  prompts.rs
tests/: build_thesis.rs  integration.rs
