# nidus is the workspace root AND its sole default member: `cargo build`/`cargo test`
# (and the core `just` recipes) touch ONLY nidus, keeping its pure-Rust, seconds-long
# build path intact. The benchmark crate — which pulls the heavy, FFI-laden deps nidus
# exists to avoid (bundled DuckDB C++, LanceDB/Arrow/DataFusion) — is a member built
# solely on explicit request (`-p nidus-bench`, via `just bench`).
[workspace]
members = ["benchmarks"]
default-members = ["."]

[package]
name = "nidus"
version = "0.28.0"
edition = "2024"
rust-version = "1.96"
description = "A small, pure-Rust embeddable vector store: brute-force or ANN cosine search over a single append-only directory, with pluggable persistence (local files, S3, GCS). No SQL, no query engine; builds in seconds."
repository = "https://github.com/duckedup/nidus"
license = "MIT"
keywords = ["vector", "embeddings", "search", "embedded", "database"]
categories = ["database-implementations", "data-structures"]
# Keep the published crate lean: drop issue-tracker, agent, CI, and deploy infra.
exclude = [".beads/", ".claude/", ".github/", "AGENTS.md", "justfile", "benchmarks/", "charts/", "Dockerfile", ".dockerignore"]

[lib]
name = "nidus"
path = "src/lib.rs"

# The `nidus` binary: the CLI plus `nidus serve`. Gated behind the non-default
# `cli` feature (see [features]) so it builds only when asked. `cargo install
# nidus --features cli` compiles it from source; `cargo binstall nidus` fetches
# a prebuilt binary (see [package.metadata.binstall]) and needs no feature flag.
[[bin]]
name = "nidus"
path = "src/bin/nidus.rs"
required-features = ["cli"]

# The all-in-one memory example (remember/recall over real providers). Gated on
# the ingest features so the default `cargo build --examples`/test path skips it.
[[example]]
name = "memory"
required-features = ["memory", "embed-all", "summarize-all"]

[features]
# Off by default — that is the whole point. With `cli` off, `cargo add nidus`
# and `cargo tree -p nidus` (`just deps`) pull NOTHING beyond the four core
# crates below, and the core build/test/Miri path stays pure and seconds-long.
# Turning it on adds the binary-only deps (all pure Rust, zero FFI).
cli = ["dep:clap", "dep:tokio", "dep:axum", "dep:tower", "dep:serde_json", "dep:tar", "dep:flate2"]

# ── AI ingest layer (SPEC §9 / epic nidus-54l) — all OFF by default ──────────
# nidus widens from a tight vector store to an all-in-one "memory": text in,
# relevant text out. The transforms that prepare/query what's remembered —
# EMBED (optional SUMMARIZE first) — live behind these off-by-default features at
# the async edge, exactly like `cli`/`serve`. The DEFAULT build pulls NONE of
# them, so `cargo add nidus` stays the pure, seconds-fast, dependency-lean sync
# vector store. Turning them on adds `reqwest` (rustls-tls → reuses the `ring`
# already present for ureq/redis; NO new C tree, NO aws-lc/OpenSSL) + `tokio` +
# `serde_json`. `#![deny(unsafe_code)]` stays intact; Miri lanes skip this layer.
#
# `embed`/`summarize` are the base infra (traits, errors, configs, provider
# enum, the shared retry helper). Each per-provider feature enables its base and
# compiles just that adapter, so a caller pays only for the providers they use.
embed = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
embed-voyage = ["embed"]
embed-openai = ["embed"]
embed-ollama = ["embed"]
embed-cohere = ["embed"]
embed-gemini = ["embed"]
embed-mistral = ["embed"]
embed-jina = ["embed"]
# Generic OpenAI-compatible embedder: one adapter whose `base_url` override
# reaches Azure OpenAI, Together, Fireworks, vLLM, LiteLLM, DeepInfra, … via the
# standard `/v1/embeddings` shape.
embed-openai-compat = ["embed"]
# Every shipped embedder at once — the "support all providers" umbrella.
embed-all = [
    "embed-voyage",
    "embed-openai",
    "embed-ollama",
    "embed-cohere",
    "embed-gemini",
    "embed-mistral",
    "embed-jina",
    "embed-openai-compat",
]

summarize = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
summarize-anthropic = ["summarize"]
# OpenAI-compatible chat-completions summarizer: serves OpenAI, Azure, LiteLLM,
# vLLM, Ollama `/v1`, … via `base_url`.
summarize-openai = ["summarize"]
summarize-all = ["summarize-anthropic", "summarize-openai"]

# The headline all-in-one memory surface (remember/recall). `memory` alone gives
# the Raw ingest path (embed the text); add a `summarize-*` feature for the
# summarize-then-embed mode.
memory = ["embed"]

# The core is four small pure-Rust crates with no C and no FFI. The S3/GCS
# persistence backends (below) add a few more — still all pure Rust except `ring`
# (ureq's TLS, a small C+asm compile) — and they are NOT feature-gated: outgrowing
# local FS for S3 is meant to be a one-line `file://`→`s3://` runtime switch, never a
# recompile. The bar is build-and-ship SPEED (whole-crate clean build stays seconds,
# ~8× under a minute — CI asserts it), not zero-C absolutism (SPEC §1, §13.6). The
# multi-minute C trees nidus exists to avoid (bundled DuckDB C++, vendored OpenSSL,
# aws-lc-sys) stay forbidden.
[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
crc32fast = "1"

# Storage-backend deps (SPEC §13), in the DEFAULT build. The cloud clients are
# sans-IO (build + sign requests; no transport, no async) — `rusty-s3` (Sigv4 = pure
# RustCrypto HMAC) and `tame-gcs`/`tame-oauth` (GCS + OAuth2 service-account JWT) —
# executed over `ureq`, a small blocking HTTP client whose default TLS is
# rustls + `ring` (self-contained via webpki-roots; NOT aws-lc, NOT OpenSSL). `url`
# and `http` are their request types, surfaced for backend construction.
rusty-s3 = "0.9"
tame-gcs = "0.14"
tame-oauth = "0.10"
ureq = "3"
url = "2"
http = "1"

# The shared MEMORY TIER over Redis (SPEC §13.3), also in the DEFAULT build. One
# `redis-rs` blocking client covers Redis, Valkey, KeyDB, and DragonflyDB — all
# RESP-protocol-compatible — selected by `redis://`/`rediss://`/`valkey://`/… URL
# scheme. `default-features = false` keeps it SYNC (no tokio/async pulled). Extras:
# `tls-rustls` for `rediss://` (reuses the rustls + `ring` already present for ureq —
# NOT aws-lc, NOT a second TLS stack) and `cluster` for Redis/Valkey Cluster (slot
# routing + MOVED/ASK), whose only added deps are `crc16` + `rand` — tiny, pure Rust.
redis = { version = "1", default-features = false, features = ["tls-rustls", "cluster"] }

# Memory-mapped immutable segments (SPEC §9 / §14.6 phase 3), in the DEFAULT build.
# `memmap2` is the one conscious FFI/`unsafe` opt-in in nidus — a thin, fast-compiling
# wrapper over the platform `mmap` syscall (no C to build, no heavy toolchain). It lets a
# store hold its cold sealed segments mapped from disk instead of resident in RAM (`Config::mmap`,
# default off → unchanged all-RAM behaviour). `bytemuck` does the one zero-copy little-endian
# `&[u8]` → `&[f32]` reinterpret *safely* (an alignment-checked cast, no extra `unsafe`), so the
# crate's only `unsafe` is the single `Mmap::map` call (see `src/data/mmap.rs`). The crate is
# `#![deny(unsafe_code)]` with that one scoped `#[allow]`; everything else stays unsafe-free.
memmap2 = "0.9"
bytemuck = "1"

# Binary-only deps — compiled ONLY under `--features cli`, never by library
# consumers. All pure Rust (no `*-sys`, no bundled C): clap for the CLI, and the
# tokio/axum/tower stack for `nidus serve`. `nidus serve` wraps the synchronous
# `Nidus` in `Arc<Mutex<…>>` + `spawn_blocking` — the exact async pattern the
# README/CLAUDE.md prescribe for async callers.
clap = { version = "4", features = ["derive", "env"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "signal", "time"], optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
serde_json = { version = "1", optional = true }
# Backup/restore archiving. Both pure Rust, zero FFI: `tar` is std-only, and
# `flate2` is pinned to its `rust_backend` (miniz_oxide) — never a `*-sys`/C
# zlib. cli-feature-only, so the pure-`cargo add nidus` tree is untouched.
tar = { version = "0.4", optional = true }
flate2 = { version = "1", default-features = false, features = ["rust_backend"], optional = true }

# AI-ingest-only dep — compiled ONLY under the `embed`/`summarize` features,
# never by default library consumers. `default-features = false` + `rustls-tls`
# reuses the rustls + `ring` TLS already pulled by ureq/redis (NOT aws-lc, NOT
# OpenSSL — no new C tree); `json` gives typed request/response bodies.
# Embeddings/summaries are single-shot request/response, so NO `stream` feature.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tempfile = "3"

# Prebuilt-binary fetch for `cargo binstall nidus`. The crate is named `nidus` but
# the release assets are `nidus-<target>.tar.gz` (`.zip` on Windows), each holding
# the bare `nidus` binary at the archive root — so the URL and bin-dir are explicit.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/nidus-{ target }{ archive-suffix }"
bin-dir = "nidus{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[profile.release]
lto = "thin"
codegen-units = 1
